--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,7 +10,8 @@
             Pedro Perez
           </h2>
         </ion-item>
-        <div style="width:100%;height:220px;margin:0px 0px;line-height:250px;background-color:#e8ebef;text-align:center;">
+        <div
+          style="width:100%;height:220px;margin:0px 0px;line-height:250px;background-color:#e8ebef;text-align:center;">
           <i class="icon ion-image" style="font-size:64px;color:#888;vertical-align:middle;"></i>
         </div>
         <ion-item color="assertive" menuClose="" on-click="goToLogin()" id="menu-list-item32">
