--- a/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.scss
+++ b/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.scss
@@ -1,3 +1,10 @@
 page-pedidos-ultima-hora {
+    .btn-dafult-app {
+        border-radius: 0;
+        margin: 0;
+    }
 
+    .zwicon-file-export {
+        margin-right: 10px;
+    }
 }
