--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,11 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+$color-primary:#4BBDEF;
+$color-text:#9f9f9f;
+$color-text-d:#757575;
+$color-gray: #CCC;
+$color-error: #ea7178;
 
 ion-header,
 ion-navbar {
@@ -21,7 +26,7 @@ ion-navbar {
     .toolbar-background-md {
         background-color: #488aff !important;
     }
-    
+
     .bar-button-default-md,
     .toolbar-title-md {
         color: white;
@@ -30,18 +35,170 @@ ion-navbar {
     .toolbar-title {
         text-align: center;
     }
+
+    ion-title {
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.4rem;
+    }
 }
 
 ion-content {
+    font-family: 'Raleway', sans-serif;
     .item-md {
         color: #415568;
     }
-    
-    
+
+
+}
+
+.title-intro-login,
+    .text-intro-login {
+        color: $color-text;
+        font-weight: 300;
+        margin: 10px auto;
+        text-align: center;
+        width: 90%;
+}
+
+#login-input3,
+#login-input4 {
+    padding: 0;
+}
+
+.text-input-md,
+.text-input-ios {
+    margin: 0;
 }
 
 .ion-page {
     .tabbar {
         opacity: 1;
+    }
+}
+
+/*Form*/
+
+#login-form1,
+#crearPedido-form2 {
+    margin: 0 auto;
+    width: 96%;
+}
+
+.item-input {
+    padding: 0;
+}
+
+.label-ios,
+.label-md {
+    color: $color-text;
+    font-size: 1.2rem;
+    margin: 0 0 0 10px;
+}
+
+.label-md[floating] {
+    margin-left: 10px;
+}
+
+.default-input {
+    border: 1px solid $color-primary;
+    border-radius: 25px;
+    color: $color-text-d;
+    font-size: 1.2rem;
+    font-weight: 300;
+    padding: 10px 10px 10px 14px;
+
+    &:focus {
+        border: 1px solid $color-primary;
+        box-shadow: none !important;
+    }
+}
+
+.item-ios{
+    &.item-label-stacked {
+        .text-input {
+            margin: 0;
+        }
+    }
+
+    &.item-label-floating {
+        .text-input {
+            margin: 0;
+        }
+    }
+}
+
+.item-md{
+    &.item-label-stacked {
+        .text-input {
+            margin: 0;
+        }
+    }
+
+    &.item-label-floating {
+        .text-input {
+            margin: 0;
+        }
+    }
+}
+
+.error {
+    color: $color-error;
+    font-size: 11px;
+}
+
+.error1 {
+    color: rgb(75, 75, 75);
+    border: 1px solid $color-error;
+}
+
+.item-md.item-input.ng-valid.item-input-has-value {
+	&:not(.input-has-focus) {
+		&:not(.item-input-has-focus) {
+			.item-inner {
+                border: 0 !important;
+                box-shadow: none !important;
+			}
+		}
+	}
+}
+
+.item-md.item-input.ng-valid.input-has-value {
+	&:not(.input-has-focus) {
+		&:not(.item-input-has-focus) {
+			.item-inner {
+                border: 0 !important;
+                box-shadow: none !important;
+			}
+		}
+	}
+}
+
+.item-inner {
+    border-bottom: 0 !important;
+    padding: 0 !important;
+    margin-bottom: 12px;
+}
+
+.item-md.item-input.item-input-has-focus {
+	.item-inner {
+		box-shadow: none !important;
+	}
+}
+.item-md.item-input.input-has-focus {
+	.item-inner {
+		box-shadow: none !important;
+	}
+}
+
+.btn-dafult-app {
+    background-color: $color-primary;
+    border-radius: 25px;
+    box-shadow: none;
+    font-size: 1.6rem;
+    padding: 20px 0;
+
+    .button-inner {
+        letter-spacing: 0.1rem;
+        text-transform: capitalize;
     }
 }
