--- a/src/pages/crear-pedido/crear-pedido.scss
+++ b/src/pages/crear-pedido/crear-pedido.scss
@@ -1,11 +1,5 @@
 page-crear-pedido {
-    .error {
-        color: rgb(223, 62, 62);
-        font-size: 11px;
-    }
-
-    .error1 {
-        color: rgb(75, 75, 75);
-        border-bottom: 1px solid #ff0000;
-    }
+   .item-inner {
+       margin-bottom: 6px;
+   }
 }
