--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,12 +2,12 @@
 // http://ionicframework.com/docs/theming/
 
 :root {
-  --ion-color-primary: #329955;
-  --ion-color-primary-rgb: 50,153,85;
+  --ion-color-primary: #4BBDEF;
+  --ion-color-primary-rgb: 75, 189, 239;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #2c874b;
-  --ion-color-primary-tint: #47a366;
+  --ion-color-primary-shade: #0096c6;
+  --ion-color-primary-tint: #00719f;
 
   --ion-color-secondary: #fedc34;
   --ion-color-secondary-rgb: 254,220,52;
@@ -103,9 +103,9 @@ $colors: (
   tertiary:    #488aff,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  gristext:  #575757,
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
